test/message/vm_dont_display_runtime_error.out
beginning
middle
test.vm:1
throw new Error("boo!")
^

Error: boo!
    at test.vm:1:7
    at Script.runInThisContext (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_dont_display_runtime_error.js:*)
